Сделана настройка для nginx. Заменен % на * в шаблоках поиска и удаления датчиков.

--- a/_Server/ParameterServer/FanControl/Static/ARM.htm
+++ b/_Server/ParameterServer/FanControl/Static/ARM.htm
@@ -92,9 +92,9 @@
           strValue: "",
           timeFilterBegin:"0",      // Параметры для фильтрации
           timeFilterEnd:"9",
-          strFilterCode:"%",
+          strFilterCode:"*",
           timeDeleteEnd:"",         // Параметры для удаления
-          strDeleteCode:"%",
+          strDeleteCode:"*",
         }
       },
       methods: {
